--- a/_posts/2017-11-13-team.markdown
+++ b/_posts/2017-11-13-team.markdown
@@ -4,7 +4,7 @@ title:  "About the Digital Transformation Office"
 gradelevel: 0
 ref: aboutus
 date:   2017-12-11 09:48:44 +0100
-published: true
+published: false
 lang: en
 alt: A photo of the Digital Transformation Office team together
 description: About the Digital Transformation Office at Treasury Board of Canada Secretariat.
