--- a/_posts/2017-11-13-equipe.markdown
+++ b/_posts/2017-11-13-equipe.markdown
@@ -9,4 +9,313 @@ lang: fr
 description: À propos du Bureau de la transformation numérique au Secrétariat du Conseil du Trésor du Canada. 
 ---
 
-Bonjour le monde.
+The Digital Transformation Office (DTO) is part of the Treasury Board Secretariat of Canada’s Strategic Communications and Ministerial Affairs branch. At DTO, we are communications professionals with expertise in plain language writing, content and interaction design, and user research.
+
+We work with departments to:
+
+* ensure that the Canada.ca brand is recognized and trusted by Canadians
+
+* make information and services that are in-demand and published on digital channels easier to find and understand based on insight from user research
+
+* help communications teams develop their skills and processes as they make a sustainable shift to digital in their organization
+
+
+
+
+## Meet the team
+
+<div class="clearfix" style="padding-top: 30px;"></div>
+
+<div class="col-md-3 col-xs-12">
+   <div class="pull-left">
+   <img class="img-responsive"  style="margin-bottom: 15px;" src="/images/DTO-aboutus/DTO_blog_photo_DSC_3853_277x370.jpg" width="185px" alt="Allen Pink" />
+      Allen Pink <br>
+      <b> Director </b>
+   </div>
+</div>
+
+
+<div class="col-md-9 col-xs-12">
+<figcaption>
+
+   
+<p>Allen is meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow.</p>
+
+</figcaption>
+</div>
+
+<div class="clearfix" style="margin-bottom: 35px;"></div>
+
+
+<div class="col-md-3 col-xs-12">
+   <div class="pull-left" style="margin-bottom: 15px;">
+   <img class="img-responsive"  style="margin-bottom: 15px;" src="/images/DTO-aboutus/DTO_blog_photo_DSC_3862_277x370.jpg" width="185px" alt="Peter Smith" />
+      Peter Smith<br>
+      <b>Chief, Product Design</b>
+   </div>
+</div>
+
+
+<div class="col-md-9 col-xs-12">
+<figcaption>
+
+<p>Peter manages product design for Canada.ca, leading a small but mighty team of usability researchers and interaction designers. Over a 20 year career in the public service, he’s also managed Web and print publishing, designed corporate identity systems, and copyedited far too many news releases and annual reports.</p><p>While in academia, he obtained a BA in Anthropology and dabbled in archaeology and literary criticism.</p>
+
+</figcaption>
+</div>
+
+<div class="clearfix" style="margin-bottom: 35px;"></div>
+
+<div class="col-md-3 col-xs-12">
+   <div class="pull-left" style="margin-bottom: 15px;">
+   <img class="img-responsive"  style="margin-bottom: 15px;" src="/images/DTO-aboutus/DTO_blog_photo_DSC_3867_277x370.jpg" width="185px" alt="Manu Singh" />
+      Manu Singh<br>
+      <b>Chief, Standards and Guidance</b>
+   </div>
+</div>
+
+
+<div class="col-md-9 col-xs-12">
+<figcaption>
+
+<p>Manu is the Standards and Guidance chief for Canada.ca at the Treasury Board of Canada Secretariat (TBS).  His team of talented content design experts help departments improve content, while also managing and improving the standards and guidance that help make Canada.ca better for people.</p><p>He’s the recipient of a 2017 Public Service Award of Excellence for demonstrating leadership in collaborative approaches with citizens. His academic background includes studies in Biology, Cognitive Psychology and Computer Science. He’s has been working in Web for over 17 years.</p>
+
+</figcaption>
+</div>
+
+<div class="clearfix" style="margin-bottom: 35px;"></div>
+
+<div class="col-md-3 col-xs-12">
+   <div class="pull-left" style="margin-bottom: 15px;">
+   <img class="img-responsive"  style="margin-bottom: 15px;" src="/images/DTO-aboutus/DTO_blog_photo_DSC_3069_277x370.jpg" width="185px" alt="Gil C&ocirc;té" />
+      Gil C&ocirc;té<br>
+      <b>Optimization Delivery Lead (Consultant)</b>
+   </div>
+</div>
+
+
+<div class="col-md-9 col-xs-12">
+<figcaption>
+
+<p>Gil is a digital pioneer with over 25 years of digital transformation experience as a public servant, consultant and business leader. His roles have involved project leadership, product development, business transformation, information and business architecture and application development.</p><p>He has a proven track record working with extended project teams, across and between organizations to develop innovative and award winning digital solutions involving content management, search, analytics, and machine learning. His diverse experience includes public and private sector engagements throughout Canada, USA and Europe.</p>
+
+</figcaption>
+</div>
+
+<div class="clearfix" style="margin-bottom: 35px;"></div>
+
+<div class="col-md-3 col-xs-12">
+   <div class="pull-left" style="margin-bottom: 15px;">
+   <img class="img-responsive"  style="margin-bottom: 15px;" src="/images/DTO-aboutus/DTO_blog_photo_DSC_3043_277x370.jpg" width="185px" alt="Miguel Borges-Porteous" />
+      Miguel Borges-Porteous<br>
+      <b>Design Researcher</b>
+   </div>
+</div>
+
+
+<div class="col-md-9 col-xs-12">
+<figcaption>
+
+<p>Miguel is one of the research leads for top task improvements for Canada.ca. He holds a master’s degree in history and uses that training to ask the right questions about how Canadians are completing their top tasks and where they encounter difficulties. He has been working collaboratively with UX experts in Ottawa to bring the latest design research techniques into the Canadian civil service.</p><p>He is encouraging more thought around usability test design and use of analytics to develop empathy with website visitors. Miguel is also trying to find like-minded people in the GC who are trying to adapt behavioural insights to help government better achieve policy objectives and make change for Canadians.</p>
+
+</figcaption>
+</div>
+
+<div class="clearfix" style="margin-bottom: 35px;"></div>
+
+<div class="col-md-3 col-xs-12">
+   <div class="pull-left" style="margin-bottom: 15px;">
+   <img class="img-responsive"  style="margin-bottom: 15px;" src="/images/DTO-aboutus/DTO_blog_photo_DSC_3033_277x370.jpg" width="185px" alt="Dave Knight" />
+      Dave Knight<br>
+      <b>Senior Interaction Designer</b>
+   </div>
+</div>
+
+
+<div class="col-md-9 col-xs-12">
+<figcaption>
+
+<p>Dave is a Senior Interaction Designer working on Canada.ca with the Digital Transformation Office.  He has been working on Canada.ca for several years now, after twenty years in the private sector working in website design and development.  He is responsible for nuturing and growing the project’s design systems, and spends most of his time researching, creating and evaluating page layouts, user interface patterns and navigation systems for use on the site.</p><p>He loves things that work well and things that are easy to use, and loathes those that are unnecessarily difficult, confusing or otherwise inconvenient for the people trying to use them.  He applies his experience in digital design to make sure that people’s experiences on Canada.ca are as successful, efficient, and pleasant as possible.  His personal mission is to make the digital world a little friendlier, and a little easier - one piece at a time.</p>
+
+</figcaption>
+</div>
+
+<div class="clearfix" style="margin-bottom: 35px;"></div>
+
+<div class="col-md-3 col-xs-12">
+   <div class="pull-left" style="margin-bottom: 15px;">
+   <img class="img-responsive"  style="margin-bottom: 15px;" src="/images/DTO-aboutus/DTO_blog_photo_DSC_3047_277x370.jpg" width="185px" alt="Eric Cooper" />
+      Eric Cooper<br>
+      <b>Project Coordinator</b>
+   </div>
+</div>
+
+
+<div class="col-md-9 col-xs-12">
+<figcaption>
+
+<p>Eric is a project coordinator for the Digital Transformation Office. It takes a lot of work to overhaul a top task, start to finish, and Eric contributes by engaging with partners, managing the schedule, and getting tools when needed (digital or analog). Over the past 3 years, he’s contributed to the development and publication of the Canada.ca Content and Information Architecture Specification and the Canada.ca Content Style Guide.</p><p>He holds an honours Bachelor’s degree of Integrated Science with concentrations in Mathematics and Psychology and, in 2017, he earned his Project Management Professional PMP certification.</p>
+
+</figcaption>
+</div>
+
+<div class="clearfix" style="margin-bottom: 35px;"></div>
+
+<div class="col-md-3 col-xs-12">
+   <div class="pull-left" style="margin-bottom: 15px;">
+   <img class="img-responsive"  style="margin-bottom: 15px;" src="/images/DTO-aboutus/DTO_blog_photo_DSC_3035_277x370.jpg" width="185px" alt="Patrick Lajeunesse" />
+      Patrick Lajeunesse <br>
+      <b>Senior Design Researcher</b>
+   </div>
+</div>
+
+
+<div class="col-md-9 col-xs-12">
+<figcaption>
+
+<p>Patrick has more than 15 years of user experience design and research. With a degree in Psychology, he applied his research and analysis training to digital communications for the United Nations and other international agencies based in Geneva, Switzerland.</p><p>He spent a decade working in start-ups based in Ottawa and Connecticut, leading product design for a suite of tools used by some of the largest school districts in the US. Patrick has been working to improve service delivery for the Government of Canada since 2009.</p>
+
+</figcaption>
+</div>
+
+<div class="clearfix" style="margin-bottom: 35px;"></div>
+
+<div class="col-md-3 col-xs-12">
+   <div class="pull-left" style="margin-bottom: 15px;">
+   <img class="img-responsive"  style="margin-bottom: 15px;" src="/images/DTO-aboutus/DTO_blog_photo_DSC_3840_277x370.jpg" width="185px" alt="Lisa Fast" />
+      Lisa Fast <br>
+      <b>Solution Lead (Consultant)</b>
+   </div>
+</div>
+
+
+<div class="col-md-9 col-xs-12">
+<figcaption>
+
+<p>Lisa is a User Experience (UX) architect and behavioural researcher with over 25 years of experience. Over her career, she has led multi-disciplinary design teams for a range of products and services, won innovation awards and has personally facilitated over 1,000 hours of UX research.</p><p>After Nortel, she joined a cognitive research team at Carleton University. Lisa was UX research lead consultant for Canada.ca, and an active Github collaborator on the Government of Canada's Web Experience Toolkit (WET). Back before UX was even a thing, Lisa completed a master's degree in computer science in the psychology of programming.</p>
+
+</figcaption>
+</div>
+
+
+<div class="clearfix" style="margin-bottom: 35px;"></div>
+
+<div class="col-md-3 col-xs-12">
+   <div class="pull-left" style="margin-bottom: 15px;">
+   <img class="img-responsive"  style="margin-bottom: 15px;" src="/images/DTO-aboutus/DTO_blog_photo_DSC_3061_277x370.jpg" width="185px" alt="Julie Dufour" />
+      Julie Dufour<br>
+      <b>Senior Web Content Strategist</b>
+   </div>
+</div>
+
+
+<div class="col-md-9 col-xs-12">
+<figcaption>
+
+<p>Julie is a Senior Content Strategist for the Treasury Board of Canada Secretariat where she helps institutions to develop their own task-based, citizen-centric web pages. Julie focuses on how best practices lead to content that can be easily found, understood and used. Julie currently splits her time between developing official guidance, doing outreach and teaching digital writing at the Canada School of Public Service.</p><p>She is also the former manager of web writing for Health Canada and has spent several years figuring out how to operationalize guidance. In the last 12 months, she has presented more than 60 times to over 30 federal institutions and 2,000 people.</p>
+
+</figcaption>
+</div>
+
+<div class="clearfix" style="margin-bottom: 35px;"></div>
+
+<div class="col-md-3 col-xs-12">
+   <div class="pull-left" style="margin-bottom: 15px;">
+   <img class="img-responsive"  style="margin-bottom: 15px;" src="/images/DTO-aboutus/DTO_blog_photo_DSC_3831_277x370.jpg" width="185px" alt="Jane Stewart" />
+      Jane Stewart<br>
+      <b>Solution Lead (Consultant)</b>
+   </div>
+</div>
+
+
+<div class="col-md-9 col-xs-12">
+<figcaption>
+
+<p>Jane is an information scientist and information architect who has practiced the discipline of organizing for over 25 years. She has designed standards-based and user-centered classification schemes, taxonomies, thesauri, and web navigation systems, and her designs have been implemented in websites, intranets, and interactive applications managed by both private and public sector organizations.</p><p>As an employee, her career has included practitioner and leadership roles at Bell-Northern Research, Nortel, Industry Canada, and Systemscope. As a consultant, she has completed over 60 projects digital transformation projects with a wide variety of organizations. She has operated her independent design firm, Aboutness Inc., since 2010.</p>
+
+</figcaption>
+</div>
+
+<div class="clearfix" style="margin-bottom: 35px;"></div>
+
+<div class="col-md-3 col-xs-12">
+   <div class="pull-left" style="margin-bottom: 15px;">
+   <img class="img-responsive"  style="margin-bottom: 15px;" src="/images/DTO-aboutus/DTO_blog_photo_DSC_3826_277x370.jpg" width="185px" alt="Jennifer Mealing" />
+      Jennifer Mealing<br>
+      <b>Interaction Designer</b>
+   </div>
+</div>
+
+
+<div class="col-md-9 col-xs-12">
+<figcaption>
+
+<p>Jennifer has been working as a designer for nearly a decade, but it was a passion to genuinely improve experiences (and to solve real problems for real users) that made her decide to specialize in Interaction Design in recent years.</p><p>Joining the Digital Transformation Office team was the perfect opportunity to help others through design. Working here presents the unique challenge, and opportunity, to build better government services for all Canadians. Together she works to validate and test ideas, building data-driven solutions for the public.</p>
+
+</figcaption>
+</div>
+
+<div class="clearfix" style="margin-bottom: 35px;"></div>
+
+<div class="col-md-3 col-xs-12">
+   <div class="pull-left" style="margin-bottom: 15px;">
+   <img class="img-responsive"  style="margin-bottom: 15px;" src="/images/DTO-aboutus/DTO_blog_photo_DSC_3075_277x370.jpg" width="185px" alt="Jillian LeBlanc" />
+      Jillian LeBlanc<br>
+      <b>Digital Engagement Advisor</b>
+   </div>
+</div>
+
+
+<div class="col-md-9 col-xs-12">
+<figcaption>
+
+<p>Jillian is a Digital Engagement Advisor for Treasury Board Secretariat Canada. Jillian came to TBS from working as the Youth Engagement and Social Media coordinator for Equal Voice Canada and was one of the leads for the Daughters of the Vote initiative.  She has been a Samara Everyday Political Citizen nominee in 2015 and 2016 and is an Apathy is Boring 150 youth representative for Ottawa.</p><p>Jillian has worked on a variety of initiatives to encourage greater youth participation in political spaces and passionate about connecting Canadians to their government through digital mediums. She can be found IRL using technology to try and solve civic engagement issues with Civic Tech and Women in Communications and Technology and she can also be found online discussing #gcdigital and #canadadotca.</p>
+
+</figcaption>
+</div>
+
+<div class="clearfix" style="margin-bottom: 35px;"></div>
+
+<div class="col-md-3 col-xs-12">
+   <div class="pull-left" style="margin-bottom: 15px;">
+   <img class="img-responsive"  style="margin-bottom: 15px;" src="/images/DTO-aboutus/DTO_blog_photo_DSC_3054_277x370.jpg" width="185px" alt="David Pepin" />
+      David Pepin<br>
+      <b>Content Designer</b>
+   </div>
+</div>
+
+
+<div class="col-md-9 col-xs-12">
+<figcaption>
+
+<p>David started his career in the federal public service at the Canada Revenue Agency in 2007, after studying French literature and French teaching. As he was updating publications and web pages, he found his real passion: organizing information and developing content for people, based on their real needs. Since then, his goal has been to simplify and clarify the content in order to allow users to complete their tasks as easily as possible.</p><p>He continued his career at Service Canada, with Canada.ca’s Principal Publisher, and then at Global Affairs Canada, where he used his web expertise to enhance content used by thousands of people. David joined the Treasury Board Digital Transformation team with the same desire to strive to make the Government of Canada's Web presence more accessible, more understandable, easier to use and more focused on people's needs.</p>
+
+</figcaption>
+</div>
+
+<div class="clearfix" style="margin-bottom: 35px;"></div>
+
+<div class="col-md-3 col-xs-12">
+   <div class="pull-left" style="margin-bottom: 15px;">
+   <img class="img-responsive"  style="margin-bottom: 15px;" src="/images/DTO-aboutus/DTO_blog_photo_DSC_3849_277x370.jpg" width="185px" alt="Laura Piper" />
+      Laura Piper<br>
+      <b>Senior Content Designer</b>
+   </div>
+</div>
+
+
+<div class="col-md-9 col-xs-12">
+<figcaption>
+
+<p>Laura is passionate about plain language and web accessibility. She comes from a training background and loves turning complicated content into something that is easy to understand. Laura has been transforming web content for the past decade and a half with Indigenous and Northern Affairs Canada and the Correctional Service of Canada.</p><p>She has led both external and internal web renewal projects. Laura’s role on the team is to improve content on Canada.ca. She looks for duplicate, conflicting, or confusing information then works with the appropriate department to make that content better for Canadians.</p>
+
+</figcaption>
+</div>
+
+<div class="clearfix" style="margin-bottom: 35px;"></div>
+
+<img class="img-responsive" src="/images/DTO-aboutus/DTO_blog_photo_DSC_3882.jpg" alt="Photo of the DTO team, December 2017" />
+
+## We want to hear from you
+
+Join the digital conversation at [#Canadadotca](https://twitter.com/search?q=%23Canadadotca) or send us an email at <information@tbs-sct.gc.ca>
