--- a/_posts/2017-11-13-equipe.markdown
+++ b/_posts/2017-11-13-equipe.markdown
@@ -6,6 +6,7 @@ ref: aboutus
 date:   2017-11-13 09:48:44 +0100
 published: false
 lang: fr
+alt: **alt text for thumbnail image on home**
 description: À propos du Bureau de la transformation numérique au Secrétariat du Conseil du Trésor du Canada. 
 ---
 
