--- a/_posts/2017-11-13-equipe.markdown
+++ b/_posts/2017-11-13-equipe.markdown
@@ -10,15 +10,15 @@ alt: alt text for thumbnail image on home
 description: À propos du Bureau de la transformation numérique au Secrétariat du Conseil du Trésor du Canada. 
 ---
 
-The Digital Transformation Office (DTO) is part of the Treasury Board Secretariat of Canada’s Strategic Communications and Ministerial Affairs branch. At DTO, we are communications professionals with expertise in plain language writing, content and interaction design, and user research.
+Le Bureau de la transformation numérique (BTN) fait partie des Communications stratégiques et affaires ministérielles du Secrétariat du Conseil du Trésor du Canada. En tant que professionnels des communications au BTN, nous avons une expertise en rédaction en langage clair, en conception de contenu et d’interactions, et en recherche sur les utilisateurs.
 
-We work with departments to:
+Nous travaillons avec les ministères pour :
 
-* ensure that the Canada.ca brand is recognized and trusted by Canadians
+* faire en sorte que la marque Canada.ca soit reconnue et que les Canadiens puissent s’y fier;
 
-* make information and services that are in-demand and published on digital channels easier to find and understand based on insight from user research
+* faire en sorte que les renseignements et les services qui sont réclamés et publiés par voies numériques soient plus faciles à trouver et à comprendre selon les informations recueillies dans le cadre de recherches sur les utilisateurs;
 
-* help communications teams develop their skills and processes as they make a sustainable shift to digital in their organization
+* aider les équipes des communications à perfectionner leurs compétences et leurs processus dans le cadre de leur virage durable vers un environnement numérique dans leur organisation.
 
 
 
@@ -40,7 +40,7 @@ We work with departments to:
 <figcaption>
 
    
-<p>Allen is meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow.</p>
+<p>Allen est miaow miaow miaow miaow miaow miaow miaow miaow miaow miaow miaow miaow miaow miaow miaow miaow miaow miaow miaow miaow miaow miaow miaow miaow miaow miaow miaow miaow miaow miaow miaow miaow miaow miaow miaow miaow miaow miaow miaow miaow miaow miaow miaow miaow miaow miaow miaow miaow miaow miaow miaow miaow miaow miaow miaow.</p>
 
 </figcaption>
 </div>
@@ -317,6 +317,6 @@ We work with departments to:
 
 <img class="img-responsive" src="/images/DTO-aboutus/DTO_blog_photo_DSC_3882.jpg" alt="Photo of the DTO team, December 2017" />
 
-## We want to hear from you
+## Nous voulons connaître votre opinion.
 
-Join the digital conversation at [#Canadadotca](https://twitter.com/search?q=%23Canadadotca) or send us an email at <information@tbs-sct.gc.ca>
+Prenez part à la conversation numérique sur #CanadaPointca ou envoyez-nous un courriel à l’adresse <information@tbs-sct.gc.ca>
