--- a/_posts/2017-11-13-equipe.markdown
+++ b/_posts/2017-11-13-equipe.markdown
@@ -23,7 +23,7 @@ Nous travaillons avec les ministères pour :
 
 
 
-## Meet the team
+## Rencontrer l'équipe
 
 <div class="clearfix" style="padding-top: 30px;"></div>
 
