--- a/_posts/2017-11-13-team.markdown
+++ b/_posts/2017-11-13-team.markdown
@@ -39,7 +39,7 @@ We work with departments to:
 <figcaption>
 
    
-<p>Allen is meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow.</p>
+<p>A results-driven mobilizer and collaborator, Allen has 20 years of experience leading the planning, design and implementation of digital solutions of all shapes and sizes in the public and private sectors in Canada and the US. Allen remains amazed on a daily basis at the power of the internet to improve our daily lives, and is dedicated to ensuring that the Government of Canada contributes to making our lives better online.</p><p>A change specialist, he believes user-driven co-creation always creates the most viable digital outcomes, and lays the foundation for sustainable change in organizations. There is nothing like working with dedicated, professional public servants and sharing in those moments when the light goes on and real improvements are delivered.</p>
 
 </figcaption>
 </div>
