--- a/_posts/2017-11-13-team.markdown
+++ b/_posts/2017-11-13-team.markdown
@@ -135,7 +135,7 @@ We work with departments to:
 <div class="col-md-9 col-xs-12">
 <figcaption>
 
-<p>Dave is a Senior Interaction Designer working on Canada.ca with the Digital Transformation Office.  He has been working on Canada.ca for several years now, after twenty years in the private sector working in website design and development.  He is responsible for nuturing and growing the project’s design systems, and spends most of his time researching, creating and evaluating page layouts, user interface patterns and navigation systems for use on the site.</p><p>He loves things that work well and things that are easy to use, and loathes those that are unnecessarily difficult, confusing or otherwise inconvenient for the people trying to use them.  He applies his experience in digital design to make sure that people’s experiences on Canada.ca are as successful, efficient, and pleasant as possible.  His personal mission is to make the digital world a little friendlier, and a little easier - one piece at a time.</p>
+<p>Dave has been working as Senior Interaction Designer with the DTO for several years now, after twenty years in the private sector working in digital design and development. He is responsible for growing the project’s design systems, and spends most of his time creating and evaluating page layouts, user interface patterns and navigation systems for Canada.ca.</p><p>He loves things that work well, and loathes those that are  difficult, confusing or otherwise inconvenient for the people trying to use them. He applies his design expertise to help ensure that people’s experiences on Canada.ca are as efficient and pleasant as possible. His personal mission is to make the digital world a little friendlier, and a little easier - one piece at a time.</p>
 
 </figcaption>
 </div>
