french footer bandaid

--- a/_posts/2017-12-11-100-taches-du-gc.markdown
+++ b/_posts/2017-12-11-100-taches-du-gc.markdown
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: post_fr
 title:  "De quelle façon déterminons-nous les principales tâches pour Canada.ca"
 gradelevel: 7.8
 ref: toptasks
