--- a/_posts/2017-12-08-team.markdown
+++ b/_posts/2017-12-08-team.markdown
@@ -116,7 +116,7 @@ We work with departments to:
 <div class="col-md-9 col-xs-12">
 <figcaption>
 
-<p>Miguel is one of the research leads for top task improvements for Canada.ca. He is a design research that focuses on finding the best questions to ask about how Canadians are completing their top tasks and where they encounter difficulties. He has been working collaboratively with UX experts in Ottawa to bring the latest design research techniques into the Canadian civil service.</p><p>He is encouraging more thought around usability test design and use of analytics to develop empathy with website visitors. Miguel is also trying to find like-minded people in the GC who are trying to adapt behavioural insights to help government better achieve policy objectives and make change for Canadians.</p>
+<p>Miguel is one of the research leads for top task improvements for Canada.ca. He focuses on finding the best questions to ask about how Canadians are completing their top tasks and where they encounter difficulties. He has been working collaboratively with UX experts in Ottawa to bring the latest design research techniques into the Canadian civil service.</p><p>He is encouraging more thought around usability test design and use of analytics to develop empathy with website visitors. Miguel is also trying to find like-minded people in the GC who are trying to adapt behavioural insights to help government better achieve policy objectives and make change for Canadians.</p>
 
 </figcaption>
 </div>
@@ -173,7 +173,7 @@ We work with departments to:
 <div class="col-md-9 col-xs-12">
 <figcaption>
 
-<p>Patrick has been working in user experience design and research for more than 15 years. With a degree in Psychology, he applied his research and analysis training to digital communications for the United Nations and other international agencies based in Geneva, Switzerland before moving to Ottawa.</p><p>He spent a decade working in start-ups based in Ottawa and Connecticut, leading product design for a suite of tools used by some of the largest school districts in the United States. Patrick has been working to improve service delivery for the Government of Canada since 2009.</p>
+<p>Patrick has been working in user experience design and research for more than 15 years. With a degree in Psychology, he applied his research and analysis training to digital communications and design for the United Nations and other international agencies based in Geneva, Switzerland before moving to Ottawa.</p><p>He spent a decade working in start-ups based in Ottawa and Connecticut, leading product design for digital tools used by some of the largest school districts in the United States. Patrick has been working to improve service delivery for the Government of Canada since 2009.</p>
 
 </figcaption>
 </div>
